# usdp

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml
providers/: __init__.py  colmap_provider.py
tests/: test_coordinate.py
usdp/: __init__.py  coordinate.py  protocol.py  provider.py
