[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "eorld-usdp"
version = "1.0.0"
description = "Eorld USDP SDK — Unified Space Description Protocol v1.0"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Eorld", email = "dev@eorld.com"}
]
keywords = ["eorld", "usdp", "unified-space-description-protocol", "3d", "spatial", "protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
    "Topic :: Software Development :: Libraries",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["."]
