[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eorld-usdp"
version = "1.0.0"
description = "Eorld USDP SDK — Unified Space Description Protocol v1.0"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [
    {name = "Eorld", email = "dev@eorld.com"}
]
keywords = ["eorld", "usdp", "unified-space-description-protocol", "3d", "spatial", "protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/eorld-labs/usdp"
Repository = "https://github.com/eorld-labs/usdp"
Issues = "https://github.com/eorld-labs/usdp/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["."]
